# webrtc-java

./: pom.xml
.github/workflows/: build.yml
webrtc-jni/: pom.xml
webrtc-jni/src/main/cpp/: CMakeLists.txt  PostInstall.cmake
webrtc-jni/src/main/cpp/dependencies/webrtc/: CMakeLists.txt
webrtc-jni/src/main/cpp/dependencies/webrtc/patches/windows/: cwctype_header.patch
webrtc-jni/src/main/cpp/include/: JNI_MediaFileSource.h
webrtc-jni/src/main/cpp/include/media/: AvApi.h  Codec.h  Decoder.h  MediaFileSource.h  MediaStreamInfo.h
webrtc-jni/src/main/cpp/include/media/audio/: AudioConverter.h  AudioDecoder.h
webrtc-jni/src/main/cpp/include/media/video/: VideoDecoder.h
webrtc-jni/src/main/cpp/include/platform/: DlUtil.h
webrtc-jni/src/main/cpp/include/utils/: Property.h  Signal.h
webrtc-jni/src/main/cpp/src/: JNI_MediaFileSource.cpp  JNI_PeerConnectionFactory.cpp  JNI_RTCPeerConnection.cpp  JNI_VideoDesktopSource.cpp  JNI_VideoDeviceSource.cpp
webrtc-jni/src/main/cpp/src/api/: RTCRtpContributingSource.cpp  RTCRtpSynchronizationSource.cpp
webrtc-jni/src/main/cpp/src/media/: Codec.cpp  Decoder.cpp  MediaFileSource.cpp
webrtc-jni/src/main/cpp/src/media/audio/: AudioDecoder.cpp  AudioProcessingConfig.cpp
webrtc-jni/src/main/cpp/src/media/video/: VideoDecoder.cpp
webrtc-jni/src/main/cpp/toolchain/: x86_64-linux-gnu.cmake
webrtc-jni/src/main/cpp/toolchain/linux/: clang.cmake  gcc-arm64.cmake  gcc-armhf.cmake  gcc-x86.cmake  gcc-x86_64.cmake
webrtc-jni/src/main/cpp/toolchain/macos/: clang-x86_64.cmake
webrtc-jni/src/main/cpp/toolchain/windows/: msvc.cmake
webrtc/src/main/java/dev/onvoid/webrtc/media/: MediaFileSource.java  MediaStreamInfo.java
webrtc/src/main/java/dev/onvoid/webrtc/media/audio/: AudioProcessingConfig.java  AudioStreamInfo.java
webrtc/src/test/java/dev/onvoid/webrtc/: TestPeerConnection.java
webrtc/src/test/java/dev/onvoid/webrtc/media/: MediaFileSourceTests.java
(+1 files in other folders)
